--- a/style.css
+++ b/style.css
@@ -2,22 +2,56 @@
     margin: 0;
     padding: 0;
 }
-
 body {
-    background-color: aqua;
+    background-image: linear-gradient(76.5deg, rgba(129, 252, 255, 1) 0.4%, rgba(255, 175, 207, 1) 49.8%, rgba(255, 208, 153, 1) 98.6%);
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 633px;
+    font-family: 'Lexend Deca', sans-serif;
 }
 .container{
-    margin: 150px 250px;
+    margin: 150px 280px;
 }
-
 .row {
     display: flex;
     border-top-left-radius: 15px;
 }
 
-.row__col {
-    width: 300px;
-    height: 450px;
-    background-color: black;
-    border: 3px solid red;
+.row__col1 {
+    width: 290px;
+    height: 470px;
+    background-color: hsl(31, 77%, 52%);
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+.row__col2 {
+    width: 290px;
+    height: 470px;
+    background-color: hsl(184, 100%, 22%);
+}
+.row__col3 {
+    width: 290px;
+    height: 470px;
+    background-color: hsl(179, 100%, 13%);
+    border-bottom-right-radius: 8px;
+    border-top-right-radius: 8px;
+}
+img{
+    margin:45px 45px;
+}
+.col__title{
+    margin-left:45px;
+    font-size: 2.5rem;
+    color: white;
+    font-family: 'Big Shoulders Display', cursive;
+}
+p{
+    margin-left: 45px;
+    margin-right: 60px;
+    margin-top: 30px;
+    font-family: 'Lexend Deca';
+    font-size: 0.9rem;
+    color: white;
+    font-weight: 200;
+    line-height: 25px;
 }
