--- a/style.css
+++ b/style.css
@@ -10,28 +10,27 @@ body {
     font-family: 'Lexend Deca', sans-serif;
 }
 .container{
-    margin: 150px 280px;
+    margin: 150px 290px;
 }
 .row {
     display: flex;
-    border-top-left-radius: 15px;
 }
 
 .row__col1 {
     width: 290px;
-    height: 470px;
+    height: 480px;
     background-color: hsl(31, 77%, 52%);
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
 }
 .row__col2 {
     width: 290px;
-    height: 470px;
+    height: 480px;
     background-color: hsl(184, 100%, 22%);
 }
 .row__col3 {
     width: 290px;
-    height: 470px;
+    height: 480px;
     background-color: hsl(179, 100%, 13%);
     border-bottom-right-radius: 8px;
     border-top-right-radius: 8px;
@@ -54,4 +53,15 @@ p{
     color: white;
     font-weight: 200;
     line-height: 25px;
+}
+.button{
+    padding: 12px 20px;
+    border-radius: 2em;
+    color: gray;
+    background-color: white;
+    text-decoration: none;
+}
+.btn{
+    margin-left: 45px;
+    margin-top: 60px;
 }
