--- a/style.css
+++ b/style.css
@@ -3,14 +3,13 @@
     padding: 0;
 }
 body {
-    background-image: linear-gradient(76.5deg, rgba(129, 252, 255, 1) 0.4%, rgba(255, 175, 207, 1) 49.8%, rgba(255, 208, 153, 1) 98.6%);
-    background-repeat: no-repeat;
+    background-color: #E4D282;
     width: 100%;
     height: 633px;
     font-family: 'Lexend Deca', sans-serif;
 }
 .container{
-    margin: 150px 290px;
+    margin: 10% 20%;
 }
 .row {
     display: flex;
@@ -57,11 +56,60 @@ p{
 .button{
     padding: 12px 20px;
     border-radius: 2em;
-    color: gray;
+    font-weight: 400;
     background-color: white;
     text-decoration: none;
+    font-weight: 900;
 }
 .btn{
     margin-left: 45px;
     margin-top: 60px;
+}
+.button:hover{
+    border: 2px solid white;
+    background: none;
+}
+.btn:hover #yellow{
+    color: white;
+}
+.btn:hover #blue {
+    color: white;
+}
+.btn:hover #green {
+    color: white;
+}
+#yellow{
+    color: hsl(31, 77%, 52%);
+}
+#blue {
+    color: hsl(184, 100%, 22%);
+}
+#green {
+    color: hsl(179, 100%, 13%);
+}
+
+/* responsive */
+@media screen and (max-width: 500px){
+    .row{
+        display: block;
+    }
+    .row__col1{
+        border-top-right-radius: 8px;
+        border-bottom-left-radius: 0px;
+        width: 120%;
+        margin-left:-10%;
+    }
+    .row__col2{
+        width: 120%;
+        margin-left: -10%;
+    }
+    .row__col3{
+        border-top-right-radius: 0px;
+        border-bottom-left-radius: 8px;
+        width: 120%;
+        margin-left: -10%;
+    }
+    .btn{
+        margin-top: 20%;
+    }
 }
